[workspace]
resolver = "2"
members = ["launch-pad", "auction"]

[workspace.dependencies]
concordium-std = { version = "10.0.1", default-features = false }
concordium-cis2 = { version = "6.2.0", features = ["std"] }
concordium-smart-contract-testing = { version = "4.3.0" }
concordium-std-derive = { version = "6.0.0" }
rand = "0.8"
