# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "launch-pad"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Pixpel.io (https://pixpel.io/)"]
description = "Launchpad smart contract on concordium blockchain"

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
concordium-std = { workspace = true, default-features = false }
concordium-cis2.workspace = true

[dev-dependencies]
concordium-smart-contract-testing.workspace = true
concordium-std-derive.workspace= true
rand.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
